<resources>
    <string name="app_name">Easy Life</string>
    <string name="title_medicine_name">Medicine Name</string>
    <string name="hint_enter_med_name">Enter Medicine</string>
    <string name="medicine_days">Medicine Days</string>
    <string name="title_treatment_deadline">Treatment deadline</string>
    <string name="title_continuous_use">Continuous use</string>
    <string name="title_reminder">Reminder</string>
    <string name="new_medicine">NEW MEDICINE</string>
    <string name="every_day">Every day</string>
    <string name="no_medicine_added">No Medicine Added</string>
    <string name="loading_tasks_error">Error while loading medicineAlarms</string>
    <string name="successfully_saved_me_message">Medicine Added Successfully</string>
    <string name="successfully_deleted_message">Medicine deleted Successfully</string>
    <string name="reminder_message">It\'s Time to take your medicine</string>
    <string name="ignored">IGNORED</string>
    <string name="taken">TAKEN</string>
    <string name="all">ALL</string>
    <string name="menu_filter">Filter</string>
    <string name="all_label">All Medicines</string>
    <string name="ignore_label">Medicines Ignored</string>
    <string name="taken_label">Medicine Taken</string>
    <string name="no_history">No History Found</string>
    <string name="no_taken_med_history">You have not taken any medicine</string>
    <string name="no_ignored_history">Well Done</string>
    <string name="menu_stats">Monthly Report</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="expense_categories">
        <item>General</item>
        <item>Clothes</item>
        <item>Entertainment</item>
        <item>Food</item>
        <item>Health</item>
        <item>Household</item>
        <item>Hygiene</item>
        <item>Pets</item>
        <item>Presents</item>
        <item>Sports</item>
        <item>Transportation</item>
    </string-array>


    <!--  Walkthrough -->

    <string name="first_slide_title">Login Facility</string>
    <string name="second_slide_title">Budget Manager</string>
    <string name="third_slide_title">Medicine Reminder </string>
    <string name="fourth_slide_title">Prayer Reminder</string>

    <string name="first_slide_desc">You firstly create your account by your details
All your data is save on your account and its accessible by any device</string>
    <string name="second_slide_desc">By using this module you can maintain your monthly expense report by its categories, date, and amount.</string>
    <string name="third_slide_desc">You can set a medicine reminder by medicine name and time by using this module.</string>
    <string name="fourth_slide_desc">This module requires your current location access for showing Prayer Reminder according to your location</string>
</resources>