<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.MedicineReminder.AddMedicine.AddMedicine">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/app_bar_layout"
    android:layout_marginTop="5dp"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/sixteen_dp"
        app:cardElevation="@dimen/six_dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/sixteen_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.easyapplication.Main.MedicineReminder.views.RobotoBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_medicine_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_medium" />

            <EditText
                android:id="@+id/edit_med_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/hint_enter_med_name" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/sixteen_dp"
        app:cardElevation="@dimen/six_dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/sixteen_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.example.easyapplication.Main.MedicineReminder.views.RobotoBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medicine_days"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_medium" />


            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/every_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/every_day" />

            <LinearLayout
                android:id="@+id/checkbox_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="7">

                <com.example.easyapplication.Main.MedicineReminder.views.DayViewCheckBox
                    android:id="@+id/dv_sunday"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_day_view"
                    android:button="@null"
                    android:gravity="center"
                    android:text="S" />

                <com.example.easyapplication.Main.MedicineReminder.views.DayViewCheckBox
                    android:id="@+id/dv_monday"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_day_view"
                    android:button="@null"
                    android:gravity="center"
                    android:text="M" />


                <com.example.easyapplication.Main.MedicineReminder.views.DayViewCheckBox
                    android:id="@+id/dv_tuesday"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_day_view"
                    android:button="@null"
                    android:gravity="center"
                    android:text="T" />

                <com.example.easyapplication.Main.MedicineReminder.views.DayViewCheckBox
                    android:id="@+id/dv_wednesday"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_day_view"
                    android:button="@null"
                    android:gravity="center"
                    android:text="W" />

                <com.example.easyapplication.Main.MedicineReminder.views.DayViewCheckBox
                    android:id="@+id/dv_thursday"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_day_view"
                    android:button="@null"
                    android:gravity="center"
                    android:text="T" />

                <com.example.easyapplication.Main.MedicineReminder.views.DayViewCheckBox
                    android:id="@+id/dv_friday"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_day_view"
                    android:button="@null"
                    android:gravity="center"
                    android:text="F" />


                <com.example.easyapplication.Main.MedicineReminder.views.DayViewCheckBox
                    android:id="@+id/dv_saturday"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_day_view"
                    android:button="@null"
                    android:gravity="center"
                    android:text="S" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/sixteen_dp"
        app:cardElevation="@dimen/six_dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/sixteen_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.example.easyapplication.Main.MedicineReminder.views.RobotoBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_reminder"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.example.easyapplication.Main.MedicineReminder.views.RobotoBoldTextView
                    android:id="@+id/tv_medicine_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_underline"
                    android:gravity="center"
                    android:padding="@dimen/four_dp"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold"
                    android:textColor="#4d4d4d"
                    tools:text="23:30" />

                <EditText
                    android:id="@+id/tv_dose_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_underline"
                    android:gravity="center"
                    android:padding="@dimen/four_dp"
                    android:text="1.0" />


                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_dose_units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:entries="@array/medications_shape_array" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/fab_edit_task_done"
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:backgroundTint="#23C52A"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/tick_circle" />

    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edit_task_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteen_dp"
        app:fabSize="normal"
        app:backgroundTint="#23C52A"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        app:srcCompat="@drawable/ic_checked_ok" />-->

    </RelativeLayout>